# XrScreenMirror

./: .clang-format  .gitignore  CMakeLists.txt  CustomPass.cpp  CustomPass.h  ICapture.h  LinuxCapture.cpp  LinuxCapture.h  README.md  WindowsCapture.cpp  WindowsCapture.h  main.cpp
shaders/: forward.frag  forward.vert
